Fix header bg bleeding with VE

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
@@ -8,6 +8,10 @@
 .ve-activated {
 	.mw-header-container {
 		background-color: #fff;
+
+		&:before {
+			box-shadow: none;
+		}
 	}
 
 	#mw-sidebar-sitename {
